# home-design

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  TODO.md  Where.md  Workshop.md  history.md  mkdocs.yml  mkdocs_migration.md  pyproject.toml  stuff.md  tasks.md
.agents/: error-log.md  notes.md  tasks.md
.github/workflows/: docs.yml
Where/: elevation_analysis.ipynb  py_gmt_test.py  test.py
Where/data/: readme.txt
Where/data/gtopo30/: gtopo30.dbf  gtopo30.shp  gtopo30.shx  readme.txt
Where/geopandas/: test.ipynb
assets/references/: CATALOG.md
assets/tools/: score_calculator.py
assets/video/: script.md
docs/: glazing.md  glossary.md  index.md  location.md  reference.md  systems.md  todo.md
docs/assets/code/: hvac_pseudocode.py
docs/layout/: bathroom.md  bedroom.md  entrance.md  index.md  kitchen.md  loft.md  other_rooms.md  rooftop.md  workshop.md
glossary/: index.html
layout/bathroom/: index.html
layout/bedroom/: index.html
layout/entrance/: index.html
layout/kitchen/: index.html
layout/rooftop/: index.html
layout/workshop/: index.html
location/: index.html
reference/: index.html
renders/: CHECKLIST.md  brief.md
renders/3d/: README.md  index.html
site/: 404.html  index.html
site/layout/: index.html
site/layout/bathroom/: index.html
site/layout/bedroom/: index.html
site/layout/entrance/: index.html
site/layout/kitchen/: index.html
site/location/: index.html
site/reference/: index.html
site/search/: search_index.json
site/systems/: index.html
site/todo/: index.html
systems/: index.html
(+8 files in other folders)
