[project]
name = "home-design-docs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.3"
authors = [{ name = "Ruben", email = "ruben.jimenezmejias@gmail.com" }]
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.14",
  "mkdocs-exporter==6.2.0",
  "playwright==1.52.0",
  "pypdf==5.6.1",
  "shell-gpt==1.4.5",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
